[package]
name = "copy_impl"
version = "0.3.0"
edition = "2021"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/copy_impl.git"
homepage = "https://crates.io/crates/include_tt"
license = "MIT/Apache-2.0"
readme = "README.md"

description = "Macro for effortlessly duplicating impl block code across various types in Rust."
keywords = ["copy_impl", "macro", "code-transformation", "clucompany"]
categories = ["development-tools", "development-tools::build-utils"]

[dependencies]
